# SoulstoneModInstaller

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  github.rs  github_releases.rs  github_repositories.rs  installer.rs  main.rs  plugin.rs  plugins.rs  steam.rs
