[package]
name = "bepinex_installer"
version = "0.1.0"
edition = "2021"
authors = ["Buddy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamy-vdf = "0.2.0"
ansi_term = "0.12.1"
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
zip = "0.6.4"
serde_json = "1.0.94"
serde = { version = "1.0.130", features = ["derive"] }

# windows dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"

# optimize for binary size
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false
opt-level = "z"
debug-assertions = false